refactor: update assertion in CompanyServicesTest for improved readability